--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -61,6 +61,7 @@
         "clearChat": "채팅 지우기",
         "clearChatConfirmation": "전체 채팅 기록을 지우시겠습니까? 이 작업은 되돌릴 수 없습니다.",
         "thinking": "생각 중",
+        "usingTool": "도구 사용중",
         "enterMessage": "메시지를 입력하세요...",
         "noApiKey": "API 키가 설정되지 않았습니다. 설정 화면에서 API 키를 등록해주세요.",
         "goToSetting": "설정으로 이동",
