--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -37,7 +37,8 @@
         "authEmail": "이메일 인증",
         "community": "커뮤니티",
         "userInfo": "사용자 정보",
-        "contacts": "연락처"
+        "contacts": "연락처",
+        "noUser": "로그인 후 이용해주세요."
     },
     "error": {
         "unknownError": "알 수 없는 오류가 발생했습니다.",
@@ -73,5 +74,10 @@
         "sendMessageTooltip": "메시지 보내기",
         "apiKeyInstruction": "채팅을 시작하려면 설정(⚙️) 메뉴에서 {apiKeyName} API 키를 설정해주세요.",
         "title": "채팅"
+    },
+    "notice": {
+        "replyCount": "댓글 {count}개",
+        "report": "신고",
+        "noReply": "아직 댓글이 없습니다."
     }
 } 
