--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -114,5 +114,41 @@
         "loadSuccess": "Ad load success",
         "load": "Ad load",
         "loading": "Ad loading..."
+    },
+    "loan" : {
+        "newAddLoan": "New Loan Add",
+        "loanName": "Loan Name",
+        "loanAmount": "Loan Amount",
+        "loanDate": "Loan Date",
+        "loanType": "Loan Type",
+        "loanStatus": "Loan Status",
+        "loanDescription": "Loan Description",
+        "loanImage": "Loan Image",
+        "year": "Year",
+        "months": "Months",
+        "month": "Month",
+        "day": "Day",
+        "addLoan": "Add Loan",
+        "repaymentDate": "Repayment Date",
+        "optional": "(Optional)",
+        "repaymentDateDescription": "※ If there is no specified repayment date in the month, the last day of the month will be set as the repayment date.",
+        "loanAddSuccess": "Loan added successfully!",
+        "error": "An error occurred",
+        "appTitle": "Loan D-Day & Repayment Tracking",
+        "refreshError": "An error occurred while refreshing data.",
+        "emptyLoan": "No loans registered.",
+        "newLoanDescription": "Add a new loan to manage your D-Day and repayment schedule.",
+        "firstLoanAdd": "Add your first loan",
+        "repaymentComplete": "Repayment Complete",
+        "repaymentNotYet": "Repayment Not Yet",
+        "repaymentOverdue": "Repayment Overdue",
+        "deleteLoan": "Delete Loan",
+        "deleteLoanConfirmation": "Are you sure you want to delete this loan? This action cannot be undone.",
+        "deleteLoanSuccess": "Loan deleted successfully!",
+        "deleteLoanDescription": "This action cannot be undone and all loan information and repayment schedules will be permanently deleted.",
+        "cancel": "Cancel",
+        "delete": "Delete",
+        "deletingLoan": "Deleting Loan...",
+        "loanPeriod": "Loan Period"
     }
 } 
