--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -114,5 +114,41 @@
         "loadSuccess": "광고 로드 성공",
         "load": "광고 로드",
         "loading": "광고 로딩중..."
+    },
+    "loan" : {
+        "newAddLoan": "새로운 대출 추가",
+        "loanName": "대출명",
+        "loanAmount": "대출금액",
+        "loanDate": "대출일",
+        "loanType": "대출유형",
+        "loanStatus": "대출상태",
+        "loanDescription": "대출설명",
+        "loanImage": "대출이미지",
+        "year" : "년",
+        "months" : "개월",
+        "month" : "월",
+        "day" : "일",
+        "addLoan" : "대출 추가",
+        "repaymentDate": "상환일",
+        "optional" : "(선택사항)",
+        "repaymentDateDescription": "※ 해당 월에 지정 납입일이 없는 경우에는 그 달의 말일을 납입일로 설정됩니다.",
+        "loanAddSuccess": "대출이 성공적으로 추가되었습니다!",
+        "error": "오류가 발생했습니다",
+        "appTitle": "대출 D-Day & 상환 추적",
+        "refreshError": "데이터 새로고침 중 오류가 발생했습니다.",
+        "emptyLoan": "등록된 대출이 없습니다.",
+        "newLoanDescription": "새로운 대출을 추가하여\nD-Day와 상환 일정을 관리해보세요",
+        "firstLoanAdd": "첫 번째 대출 추가하기",
+        "repaymentComplete": "상환 완료",
+        "repaymentNotYet": "미상환",
+        "repaymentOverdue": "연체",
+        "deleteLoan": "대출 삭제",
+        "deleteLoanConfirmation": "대출을 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
+        "deleteLoanSuccess": "대출이 성공적으로 삭제되었습니다!",
+        "deleteLoanDescription": "이 작업은 되돌릴 수 없으며, 모든 대출 정보와 상환 스케줄이 영구적으로 삭제됩니다.",
+        "cancel": "취소",
+        "delete": "삭제",
+        "deletingLoan": "대출 삭제 중...",
+        "loanPeriod": "대출 기간"
     }
 } 
