--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -149,6 +149,51 @@
         "cancel": "취소",
         "delete": "삭제",
         "deletingLoan": "대출 삭제 중...",
-        "loanPeriod": "대출 기간"
+        "loanPeriod": "대출 기간",
+        "repaymentMethod": "상환 방식",
+        "repaymentMethodDescription": "1일 부터 31일까지 선택해주세요.",
+        "notificationSetting": "알림 설정",
+        "home": "홈",
+        "loanList": "대출 목록",
+        "statistics": "통계",
+        "community": "커뮤니티",
+        "summaryStatistics": "요약 통계",
+        "count" : "건",
+        "allLoan": "전체 대출",
+        "activeLoan": "활성 대출",
+        "expiredLoan": "만료 대출",
+        "totalLoanAmount": "총 대출금",
+        "averageInterest": "평균 이율",
+        "totalRepaymentAmount": "총 상환금",
+        "averageRepaymentDate": "평균 상환일",
+        "totalOverdueAmount": "총 연체금",
+        "averageOverdueDays": "평균 연체일",
+        "recentAddLoan": "최근 추가된 대출",
+        "inProgress": "진행중",
+        "expired": "만료",
+        "paymentDate": "납부일",
+        "next": "다음",
+        "previous": "이전",
+        "noRepaymentYet": "납부 안함",
+        "totalSummary": "전체 요약",
+        "totalInterest": "총 이자",
+        "totalRepayment": "총 상환금",
+        "totalOverdue": "총 연체금",
+        "totalLoan": "총 대출금",
+        "totalRepaymentDate": "총 상환일",
+        "totalOverdueDays": "총 연체일",
+        "totalLoanPeriod": "총 대출기간",
+        "totalRepaymentMethod": "총 상환방식",
+        "loanDetail": "대출별 상세",
+        "repaymentProgress": "상환 진행률",
+        "repaymentProgressDescription": "상환 진행률",
+        "repaymentAmount": "상환금액",
+        "repaymentStatus": "상환상태",
+        "repaymentDescription": "상환설명",
+        "repaymentImage": "상환이미지",
+        "repaymentType" : "상환유형",
+        "updateSoon": "추후 업데이트 예정입니다.",
+        "interestAnalysis": "이자 분석",
+        "interestAnalysisDescription": "이자 분석은 대출 기간 기준으로 계산됩니다."
     }
 } 
