--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -177,6 +177,17 @@
         "loanAmountValidationInvalid": "Please enter a valid amount.",
         "loanAmountValidationMin": "Please enter at least {min} USD.",
         "loanAmountValidationMax": "Please enter at most {max} USD.",
-        "annualInterestRate": "Annual Interest Rate"
+        "annualInterestRate": "Annual Interest Rate",
+        "annualInterestRateValidationEmpty": "Please enter an annual interest rate.",
+        "annualInterestRateValidationInvalid": "Please enter a valid annual interest rate.",
+        "annualInterestRateValidationMin": "The annual interest rate must be at least {min}.",
+        "annualInterestRateValidationMax": "The annual interest rate must be at most {max}.",
+        "loanPeriodValidationEmpty": "Please enter a loan period.",
+        "loanPeriodValidationInvalid": "Please enter a valid loan period.",
+        "loanPeriodValidationMin": "The loan period must be at least {min}.",
+        "loanPeriodValidationMaxYear": "The loan period must be at most {max} years.",
+        "loanPeriodValidationMaxMonths": "The loan period must be at most {max} months.",
+        "initialRepayment": "Initial Repayment",
+        "contractDeposit": "Contract Deposit, Down Payment"
     }
 } 
