--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -41,7 +41,13 @@
         "noUser": "로그인 후 이용해주세요.",
         "verified": "인증되었습니다.",
         "deleteUserData": "사용자 데이터 삭제",
-        "confirm": "확인"
+        "confirm": "확인",
+        "qrCode": "QR 코드",
+        "linkShare": "링크 공유",
+        "copyLink": "링크 복사",
+        "moveToStore": "스토어로 이동",
+        "printQrCode": "QR 코드 인쇄",
+        "viewInStore": "앱스토어/플레이스토어에서 보기"
     },
     "error": {
         "unknownError": "알 수 없는 오류가 발생했습니다.",
