--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -13,6 +13,18 @@
         "noToolsAvailable": "사용 가능한 도구가 없습니다.",
         "toolListItem": "도구 정보"
     },
+    "api": {
+        "notFound" : "요청한 리소스를 찾을 수 없습니다.",
+        "notFoundMcpApiKey" : "MCP API 키를 찾을 수 없습니다.",
+        "requestTimeout" : "요청 시간이 초과되었습니다.",
+        "network" : "네트워크 오류가 발생했습니다.",
+        "badRequest" : "잘못된 요청입니다.",
+        "unauthorized" : "인증이 필요합니다.",
+        "forbidden" : "접근이 금지되었습니다.",
+        "server" : "서버 오류가 발생했습니다.",
+        "cancelled" : "요청이 취소되었습니다.",
+        "unknown" : "알 수 없는 오류가 발생했습니다."
+    },
     "app": {
         "enable": "활성화",
         "disable": "비활성화",
