--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -83,6 +83,8 @@
         "inputEmail": "Please enter your email.",
         "createNotice": "Notice created successfully",
         "reportNotice": "Report created successfully",
+        "reportNoticeReply": "Report created successfully",
+        "reportReply": "Report created successfully",
         "deleteUserDataWarning": "This action cannot be undone. All user data will be permanently deleted.",
         "deleteUserDataTitle": "Delete User Data",
         "deleteUserDataDescription": "Are you sure you want to delete all user data?"
