--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -33,7 +33,9 @@
         "blockReason": "차단 사유",
         "blockReasonHint": "차단 사유를 입력해주세요",
         "blockedUser": "차단된 사용자 입니다.",
-        "blockedUserPost": "차단된 사용자의 게시글 입니다."
+        "blockedUserPost": "차단된 사용자의 게시글 입니다.",
+        "userNotFound": "사용자를 찾을 수 없습니다.",
+        "userName": "사용자 이름"
     },
     "app": {
         "enable": "활성화",
