--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -165,7 +165,7 @@
         "loanDescription": "Loan Description",
         "loanImage": "Loan Image",
         "year": "Year",
-        "months": "Months",
+        "months": "{month} Months",
         "month": "Month",
         "day": "Day",
         "addLoan": "Add Loan",
@@ -251,6 +251,48 @@
         "paymentSchedule": "Payment Schedule",
         "near": "Near",
         "preparing": "Preparing",
-        "waiting": "Waiting"
+        "waiting": "Waiting",
+        "repaymentSummary": "Repayment Summary",
+        "repaymentSummaryLoadError": "Failed to load repayment summary.",
+        "repaymentSummaryLoadSuccess": "Repayment summary loaded successfully.",
+        "totalInterestAmount": "Total Interest Amount",
+        "averageMonthlyPayment": "Average Monthly Payment",
+        "remainingPrincipal": "Remaining Principal",
+        "remainingInterest": "Remaining Interest",
+        "remainingInterestDescription": "The estimated amount of interest to be incurred in the future. This is the future interest cost calculated based on the remaining principal.",
+        "nextPaymentDate": "Next Payment Date",
+        "nextPaymentDateDescription": "The date to be repaid next. You must pay the repayment amount by this date to avoid overdue.",
+        "interestRatio": "Interest Ratio",
+        "principalRatio": "Principal Ratio",
+        "principalRatioDescription": "The ratio of principal in the total repayment amount. The higher this ratio, the greater the principal burden.",
+        "completedPayments": "Completed Payments",
+        "totalPayments": "Total Payments",
+        "totalPaymentsDescription": "The total number of payments to be made during the loan period. This is the same as the loan period (months).",
+        "overduePayments": "Overdue Payments",
+        "overduePaymentsDescription": "The number of payments made after the specified repayment date. Additional interest or fees may be incurred when overdue.",
+        "totalPrepaymentAmount": "Total Prepayment Amount",
+        "prepaymentInterestSavings": "Prepayment Interest Savings",
+        "totalPrepaymentAmountDescription": "The total amount of additional payments made in addition to regular payments. You can reduce your interest burden through prepayment.",
+        "prepaymentInterestSavingsDescription": "The amount of interest you can save through prepayment. You will pay less interest than originally planned.",
+        "totalRepaymentAmountDescription": "The total amount to be repaid including both the principal and interest. This represents the sum of all payments due during the loan period.",
+        "totalInterestAmountDescription": "The total amount of interest incurred during the loan period. This helps you understand how much interest is compared to the principal.",
+        "averageMonthlyPaymentDescription": "The average monthly payment amount to be paid during the loan period. This is the average value of the monthly payments including principal and interest.",
+        "remainingPrincipalDescription": "The remaining principal amount to be repaid. This amount includes interest and determines the actual amount to be paid.",
+        "repaymentProgress": "Repayment Progress",
+        "repaymentProgressDescription": "The progress of repayment as a percentage of the total loan. The closer to 100%, the closer the repayment is to completion.",
+        "interestRatioDescription": "The ratio of interest in the total repayment amount. The higher this ratio, the greater the interest burden.",
+        "completedPaymentsDescription": "The number of completed repayments so far. This represents the number of repayments made regularly.",
+        "currentValue": "Current Value: {value}",
+        "description": "Description",
+        "confirm": "Confirm",
+        "principal": "Principal",
+        "interest": "Interest",
+        "totalAmount": "Total Amount",
+        "remainingAmount": "Remaining Amount",
+        "chartDataLoadError": "Failed to load chart data",
+        "principalVsInterestRatio": "Principal vs Interest Ratio",
+        "monthlyPaymentTrend": "Monthly Payment Trend",
+        "remainingAmountTrend": "Remaining Amount Trend"
+
     }
 } 
