--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -165,8 +165,8 @@
         "loanDescription": "대출설명",
         "loanImage": "대출이미지",
         "year" : "년",
-        "months" : "개월",
-        "month" : "월",
+        "months" : "{month} 개월",
+        "month" : "{month} 월",
         "day" : "일",
         "addLoan" : "대출 추가",
         "repaymentDate": "상환일",
@@ -226,7 +226,7 @@
         "totalRepaymentMethod": "총 상환방식",
         "loanDetail": "대출별 상세",
         "repaymentProgress": "상환 진행률",
-        "repaymentProgressDescription": "상환 진행률",
+        "repaymentProgressDescription": "전체 대출 중 얼마나 상환했는지를 백분율로 나타냅니다. 100%에 가까울수록 상환 완료에 가깝습니다.",
         "repaymentAmount": "상환금액",
         "repaymentStatus": "상환상태",
         "repaymentDescription": "상환설명",
@@ -267,7 +267,50 @@
         "paymentSchedule": "납부 스케줄",
         "near": "임박",
         "preparing": "준비중",
-        "waiting": "대기중"
-        
+        "waiting": "대기중",
+        "repaymentSummary": "상환 요약",
+        "repaymentSummaryLoadError": "상환 스케줄을 불러올 수 없습니다.",
+        "repaymentSummaryLoadSuccess": "상환 스케줄을 불러왔습니다.",
+        "totalInterestAmount": "총 이자",
+        "averageMonthlyPayment": "평균 상환금",
+        "remainingPrincipal": "남은 원금",
+        "remainingInterest": "남은 이자",
+        "remainingInterestDescription": "앞으로 발생할 이자의 예상 금액입니다. 남은 원금을 기준으로 계산된 미래 이자 비용입니다.",
+        "nextPaymentDate": "다음 상환일",
+        "nextPaymentDateDescription": "다음에 상환해야 하는 날짜입니다. 이 날짜까지 상환금을 납부해야 연체를 방지할 수 있습니다.",
+        "interestRatio": "이자 비율",
+        "interestRatioDescription": "총 상환금 중 이자가 차지하는 비율입니다. 이 비율이 높을수록 이자 부담이 크다는 의미입니다.",
+        "principalRatio": "원금 비율",
+        "principalRatioDescription": "총 상환금 중 원금이 차지하는 비율입니다. 이 비율이 높을수록 원금 부담이 크다는 의미입니다.",
+        "totalPayments": "전체 상환 건수",
+        "totalPaymentsDescription": "대출 기간 동안 상환해야 하는 총 건수입니다. 대출 기간(개월)과 동일한 수치입니다.",
+        "overduePayments": "연체 건수",
+        "overduePaymentsDescription": "정해진 상환일을 지나서 납부한 건수입니다. 연체 시 추가 이자나 수수료가 발생할 수 있습니다.",
+        "totalPrepaymentAmount": "중도상환 총액",
+        "totalPrepaymentAmountDescription": "정기 상환 외에 추가로 상환한 금액의 총합입니다. 중도상환을 통해 이자 부담을 줄일 수 있습니다.",
+        "prepaymentInterestSavings": "절약 이자",
+        "prepaymentInterestSavingsDescription": "중도상환을 통해 절약할 수 있는 이자 금액입니다. 원래 상환 계획보다 이자를 덜 내게 됩니다.",
+        "totalRepaymentAmountDescription": "대출 원금과 이자를 모두 합한 총 상환해야 할 금액입니다. 이는 대출 기간 동안 납부해야 하는 모든 금액의 합계를 의미합니다.",
+        "totalInterestAmountDescription": "대출 기간 동안 발생하는 모든 이자의 합계입니다. 원금에 비해 이자가 얼마나 되는지 파악할 수 있습니다.",
+        "averageMonthlyPaymentDescription": "매월 평균적으로 납부해야 하는 상환금액입니다. 원금과 이자를 포함한 월별 납부 금액의 평균값입니다.",
+        "remainingPrincipalDescription": "아직 상환하지 못한 원금의 잔액입니다. 이 금액에 이자가 추가되어 실제 납부해야 할 금액이 결정됩니다.",
+        "completedPayments": "완료된 상환 건수",
+        "completedPaymentsDescription": "지금까지 성공적으로 상환 완료한 건수입니다. 정기적으로 납부한 상환 건수를 나타냅니다.",
+        "currentValue": "현재 값: {value}",
+        "description": "설명",
+        "confirm": "확인",
+        "principal": "원금",
+        "interest": "이자",
+        "totalAmount": "총액",
+        "remainingAmount": "잔액",
+        "chartDataLoadError": "차트 데이터를 불러올 수 없습니다",
+        "principalVsInterestRatio": "원금 vs 이자 비율",
+        "monthlyPaymentTrend": "월별 납부금 추이",
+        "remainingAmountTrend": "잔액 변화",
+        "completedPaymentsTitle": "납입 완료",
+        "completed" : "완료",
+        "uncomplete" : "미납",
+        "overdue" : "연체",
+        "overdueDays" : "연체일"        
     }
 } 
