--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -224,6 +224,7 @@
         "maturityDateRepayment": "Maturity Date Repayment",
         "equalPrincipalRepaymentDescription": "Monthly equal repayment",
         "equalPrincipalAndInterestRepaymentDescription": "Monthly equal principal and interest repayment",
+        "loanDetail": "Loan Detail",
         "maturityDateRepaymentDescription": "Monthly interest repayment, principal repayment at maturity",
         "loanNameHint": "Example: Mortgage Loan, Credit Loan, etc.",
         "loanNameValidationEmpty": "Please enter a loan name.",
@@ -231,7 +232,10 @@
         "currencyUnitString": "USD",
         "currencyUnit": "$",
         "loanAmountValidationEmpty": "Please enter a loan amount.",
+        "updateSoon": "Update Soon",
         "loanAmountValidationInvalid": "Please enter a valid amount.",
+        "interestAnalysis": "Interest Analysis",
+        "interestAnalysisDescription": "Interest analysis is calculated based on the loan period.",
         "loanAmountValidationMin": "Please enter at least {min} USD.",
         "loanAmountValidationMax": "Please enter at most {max} USD.",
         "annualInterestRate": "Annual Interest Rate",
