--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -74,6 +74,14 @@
         "viewInStore": "앱스토어/플레이스토어에서 보기",
         "shareAppWithQrCode": "QR 코드로 앱 공유하기"
     },
+    "common": {
+        "yes": "예",
+        "no": "아니오",
+        "filter": "필터",
+        "search": "검색",
+        "filterSetting": "필터 설정",
+        "all": "전체"
+    },
     "error": {
         "unknownError": "알 수 없는 오류가 발생했습니다.",
         "adNotLoaded": "광고를 불러오지 못했습니다.",
@@ -183,9 +191,10 @@
         "repaymentNotYet": "미상환",
         "repaymentOverdue": "연체",
         "deleteLoan": "대출 삭제",
-        "deleteLoanConfirmation": "대출을 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
-        "deleteLoanSuccess": "대출이 성공적으로 삭제되었습니다!",
+        "deleteLoanConfirmation": "{name} 대출을 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
+        "deleteLoanSuccess": "{name} 대출이 성공적으로 삭제되었습니다!",
         "deleteLoanDescription": "이 작업은 되돌릴 수 없으며, 모든 대출 정보와 상환 스케줄이 영구적으로 삭제됩니다.",
+        "deleteLoanError" : "대출 삭제 중 오류가 발생했습니다. \r\n {error}",
         "cancel": "취소",
         "delete": "삭제",
         "deletingLoan": "대출 삭제 중...",
@@ -312,6 +321,7 @@
         "uncomplete" : "미납",
         "overdue" : "연체",
         "overdueDays" : "연체일"       ,
-        "remainingBalance"  : "잔액"
+        "remainingBalance"  : "잔액",
+        "prepayment" : "중도금 상환"
     }
 } 
