--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -80,7 +80,11 @@
         "filter": "필터",
         "search": "검색",
         "filterSetting": "필터 설정",
-        "all": "전체"
+        "all": "전체",
+        "select": "선택",
+        "monthly": "월별",
+        "apply": "적용",
+        "reset": "초기화"
     },
     "error": {
         "unknownError": "알 수 없는 오류가 발생했습니다.",
